--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,34 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>cn.doublePoint.springmvc</groupId>
-  <artifactId>BaseWeb</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <description>Spring MVC基础项目</description>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>cn.doublePoint.springmvc</groupId>
+	<artifactId>BaseWeb</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<description>Spring MVC基础项目</description>
+
+	<!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-jpa -->
+	<dependencies>
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-jpa</artifactId>
+			<version>1.7.1.RELEASE</version>
+		</dependency>
+		
+		<dependency>
+           	<groupId>org.springframework</groupId>
+      		<artifactId>spring-test</artifactId>
+      		<version>4.3.11.RELEASE</version>
+    	</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.10</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>javax.persistence</groupId>
+		    <artifactId>persistence-api</artifactId>
+		    <version>1.0.2</version>
+		</dependency>
+	</dependencies>
 </project>
