--- a/01SOURCE/SpringMVC/.settings/org.eclipse.core.resources.prefs
+++ b/01SOURCE/SpringMVC/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,11 @@
 eclipse.preferences.version=1
 encoding//WebContent/WEB-INF/jsp/NewFile.jsp=UTF-8
 encoding//WebContent/WEB-INF/jsp/test.jsp=UTF-8
+encoding//WebContent/index.jsp=UTF-8
+encoding//src/main/java=UTF-8
 encoding//src/main/java/cn/doublepoint=UTF-8
+encoding//src/main/resources=UTF-8
 encoding//src/test/java=UTF-8
 encoding//src/test/java/TestXMLReader/DOMTest.java=UTF-8
+encoding//src/test/resources=UTF-8
+encoding/<project>=UTF-8
