--- a/01SOURCE/SpringMVC/pom.xml
+++ b/01SOURCE/SpringMVC/pom.xml
@@ -1,11 +1,12 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>cn.doublePoint.springmvc</groupId>
 	<artifactId>BaseWeb</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<description>Spring MVC基础项目</description>
-<properties>
+	<properties>
 		<!-- spring版本号 -->
 		<spring.version>4.3.5.RELEASE</spring.version>
 		<project.build.sourceEncoding>
@@ -27,11 +28,11 @@
 			<version>4.12</version>
 		</dependency>
 		<!-- 阿里巴巴数据源包 -->
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>druid</artifactId>
-            <version>1.0.2</version>
-        </dependency>
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>druid</artifactId>
+			<version>1.0.2</version>
+		</dependency>
 		<!--spring -->
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -86,11 +87,11 @@
 			<version>4.3.6.Final</version>
 		</dependency>
 
-	<dependency>  
-            <groupId>javax.annotation</groupId>  
-            <artifactId>jsr250-api</artifactId>  
-            <version>1.0</version>  
-        </dependency>  
+		<dependency>
+			<groupId>javax.annotation</groupId>
+			<artifactId>jsr250-api</artifactId>
+			<version>1.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
