--- a/01SOURCE/SpringMVC/pom.xml
+++ b/01SOURCE/SpringMVC/pom.xml
@@ -98,7 +98,11 @@
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
 		</dependency>
-		
+		<dependency>
+			<groupId>cn.doublePoint.taglib</groupId>
+			<artifactId>TagLib</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 
