--- a/01SOURCE/SpringMVC/.settings/org.eclipse.core.resources.prefs
+++ b/01SOURCE/SpringMVC/.settings/org.eclipse.core.resources.prefs
@@ -6,6 +6,7 @@ encoding//src/main/java=UTF-8
 encoding//src/main/java/cn/doublepoint=UTF-8
 encoding//src/main/resources=UTF-8
 encoding//src/test/java=UTF-8
+encoding//src/test/java/TestP/DOMTest.java=UTF-8
 encoding//src/test/java/TestXMLReader/DOMTest.java=UTF-8
 encoding//src/test/resources=UTF-8
 encoding/<project>=UTF-8
