--- a/01SOURCE/TagLib/.project
+++ b/01SOURCE/TagLib/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>TagLib</name>
+	<name>base-taglib</name>
 	<comment></comment>
 	<projects>
 	</projects>
