--- a/01SOURCE/SpringMVC/.project
+++ b/01SOURCE/SpringMVC/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>BaseWeb</name>
+	<name>base-web</name>
 	<comment></comment>
 	<projects>
 	</projects>
