--- a/01SOURCE/SpringMVC/pom.xml
+++ b/01SOURCE/SpringMVC/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>cn.doublePoint.springmvc</groupId>
+	<groupId>cn.doublepoint.base</groupId>
 	<artifactId>BaseWeb</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<description>Spring MVC基础项目</description>
@@ -99,8 +99,8 @@
 			<version>1.2</version>
 		</dependency>
 		<dependency>
-			<groupId>cn.doublePoint.taglib</groupId>
-			<artifactId>TagLib</artifactId> 
+			<groupId>cn.doublepoint.base</groupId>
+			<artifactId>base-taglib</artifactId> 
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
