--- a/01SOURCE/base-taglib/pom.xml
+++ b/01SOURCE/base-taglib/pom.xml
@@ -49,6 +49,13 @@
 			<artifactId>gson</artifactId>
 			<version>2.3.1</version>
 		</dependency>
+		
+		<!-- 父项目 -->
+		<dependency>
+			<groupId>cn.doublepoint.base</groupId>
+			<artifactId>base-common</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<build>
