--- a/01SOURCE/base-common/pom.xml
+++ b/01SOURCE/base-common/pom.xml
@@ -20,10 +20,10 @@
 			<version>${spring.version}</version>
 		</dependency>
 		<!-- gson需用 -->
-		<dependency>
+		<!-- <dependency>
 			<groupId>com.google.code.gson</groupId> 
 			<artifactId>gson</artifactId>
 			<version>2.2.4</version>
-		</dependency>
+		</dependency> -->
 	</dependencies>
 </project>
