--- a/01SOURCE/base-web/pom.xml
+++ b/01SOURCE/base-web/pom.xml
@@ -98,11 +98,11 @@
 			<artifactId>base-taglib</artifactId> 
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
 			<groupId>cn.doublepoint.base</groupId>
 			<artifactId>base-common</artifactId> 
 			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
+		</dependency> -->
 	</dependencies>
 
 
