增加在家新功能 git commit -m  增加在家新功能“

--- a/01SOURCE/base-taglib/.project
+++ b/01SOURCE/base-taglib/.project
@@ -3,6 +3,7 @@
 	<name>base-taglib</name>
 	<comment></comment>
 	<projects>
+		<project>base-common</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
