--- a/01SOURCE/base-web/.classpath
+++ b/01SOURCE/base-web/.classpath
@@ -33,9 +33,9 @@
 	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
-			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry combineaccessrules="false" kind="src" path="/base-common"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/base-common-type"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
