--- a/01SOURCE/base-web/.project
+++ b/01SOURCE/base-web/.project
@@ -3,6 +3,7 @@
 	<name>base-web</name>
 	<comment></comment>
 	<projects>
+		<project>base-common-type</project>
 		<project>base-common</project>
 	</projects>
 	<buildSpec>
