--- a/01SOURCE/base-common/pom.xml
+++ b/01SOURCE/base-common/pom.xml
@@ -5,13 +5,13 @@
 	<artifactId>base-common</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
-	<properties>
-		<!-- spring版本号 -->
+	<!-- <properties>
+		spring版本号
 		<spring.version>4.3.5.RELEASE</spring.version>
 		<project.build.sourceEncoding>
 			UTF-8
 		</project.build.sourceEncoding>
-	</properties>
+	</properties> -->
 	<dependencies>
 		<!--spring data jpa -->
 		<dependency>
