--- a/01SOURCE/base-common-type/.project
+++ b/01SOURCE/base-common-type/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>base-common-type</name>
+	<name>base-common-util</name>
 	<comment></comment>
 	<projects>
 	</projects>
