--- a/01SOURCE/base-jdbc/pom.xml
+++ b/01SOURCE/base-jdbc/pom.xml
@@ -24,6 +24,11 @@
 			<version>4.3.6.Final</version>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>javax.annotation</groupId>
 			<artifactId>jsr250-api</artifactId>
 			<version>1.0</version>
