--- a/01SOURCE/base-web/.project
+++ b/01SOURCE/base-web/.project
@@ -4,6 +4,8 @@
 	<comment></comment>
 	<projects>
 		<project>base-common</project>
+		<project>base-common-util</project>
+		<project>base-jdbc</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
