--- a/01SOURCE/base-common/.classpath
+++ b/01SOURCE/base-common/.classpath
@@ -26,7 +26,7 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/base-common-util"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/base-jdbc"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/base-datajpa"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7">
 		<attributes>
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
