--- a/01SOURCE/base-jdbc/pom.xml
+++ b/01SOURCE/base-jdbc/pom.xml
@@ -33,5 +33,26 @@
 			<artifactId>jsr250-api</artifactId>
 			<version>1.0</version>
 		</dependency>
+
+		<dependency>
+			<groupId>cn.doublepoint.base</groupId>
+			<artifactId>base-common-util</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
+	
+	<build>
+		<!-- <finalName>open</finalName> -->
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.2</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
