--- a/01SOURCE/base-web/.settings/org.eclipse.core.resources.prefs
+++ b/01SOURCE/base-web/.settings/org.eclipse.core.resources.prefs
@@ -5,4 +5,5 @@ encoding//WebContent/template/xt/ajaxdatagrid.jsp=UTF-8
 encoding//WebContent/template/xt/index/index.jsp=UTF-8
 encoding//src/main/resources=UTF-8
 encoding//src/test/java=UTF-8
+encoding//src/test/java/cn/doublepoint/billing/ModelModel.java=UTF-8
 encoding/<project>=UTF-8
