--- a/01SOURCE/base-common-util/pom.xml
+++ b/01SOURCE/base-common-util/pom.xml
@@ -35,7 +35,7 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-entitymanager</artifactId>
-			<version>4.3.6.Final</version>
+			<version>${hibernate.entitymanager.version}</version>
 		</dependency>
 	</dependencies>
 	
