--- a/01SOURCE/base-datajpa/pom.xml
+++ b/01SOURCE/base-datajpa/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>cn.doublepoint.base</groupId>
 	<artifactId>base-datajpa</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	
+
 	<parent>
 		<groupId>cn.doublepoint.base</groupId>
 		<artifactId>base-parent</artifactId>
@@ -20,13 +20,13 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
-			<version>4.1.0.RELEASE</version>
+			<version>${spring.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
-			<version>4.3.5.RELEASE</version>
+			<version>${spring.version}</version>
 		</dependency>
 	</dependencies>
 </project>
