--- a/01SOURCE/base-jdbc/pom.xml
+++ b/01SOURCE/base-jdbc/pom.xml
@@ -5,12 +5,12 @@
 	<artifactId>base-jdbc</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
-	<properties>
-		<spring.version>4.3.5.RELEASE</spring.version>
-		<project.build.sourceEncoding>
-			UTF-8
-		</project.build.sourceEncoding>
-	</properties>
+	<parent>
+		<groupId>cn.doublepoint.base</groupId>
+		<artifactId>base-parent</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+	</parent>
+
 
 	<dependencies>
 		<dependency>
@@ -21,7 +21,7 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-entitymanager</artifactId>
-			<version>4.3.6.Final</version>
+			<version>${hibernate.entitymanager.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -40,7 +40,7 @@
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
-	
+
 	<build>
 		<!-- <finalName>open</finalName> -->
 		<plugins>
