--- a/01SOURCE/base-jdbc/pom.xml
+++ b/01SOURCE/base-jdbc/pom.xml
@@ -36,7 +36,7 @@
 		<dependency>
 			<groupId>cn.doublepoint.base</groupId>
 			<artifactId>base-common-util</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>${cn.doublepoint.base.version}</version>
 		</dependency>
 	</dependencies>
 
