--- a/01SOURCE/base-datajpa/pom.xml
+++ b/01SOURCE/base-datajpa/pom.xml
@@ -28,5 +28,11 @@
 			<artifactId>spring-core</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>cn.doublepoint.base</groupId>
+			<artifactId>base-common-util</artifactId>
+			<version>${cn.doublepoint.base.version}</version>
+		</dependency>
 	</dependencies>
 </project>
