--- a/01SOURCE/base-parent/pom.xml
+++ b/01SOURCE/base-parent/pom.xml
@@ -11,11 +11,13 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<!-- spring版本号 -->
 		<spring.version>4.3.5.RELEASE</spring.version>
-		<spring.data.jpa.version>1.8.0.RELEASE</spring.data.jpa.version>
+		<spring.data.jpa.version>1.10.4.RELEASE</spring.data.jpa.version>
 		<junit.version>4.12-beta-3</junit.version>
 		<jackson.core.version>2.9.2</jackson.core.version>
 		<hibernate.entitymanager.version>4.3.6.Final</hibernate.entitymanager.version>
 		<cn.doublepoint.base.version>0.0.1-SNAPSHOT</cn.doublepoint.base.version>
+		<commons.lang.version>2.3</commons.lang.version>
 	</properties>
-
+	<dependencies>
+	</dependencies>
 </project>
