--- a/01SOURCE/base-parent/pom.xml
+++ b/01SOURCE/base-parent/pom.xml
@@ -17,6 +17,7 @@
 		<hibernate.entitymanager.version>4.3.6.Final</hibernate.entitymanager.version>
 		<cn.doublepoint.base.version>0.0.1-SNAPSHOT</cn.doublepoint.base.version>
 		<commons.lang.version>2.3</commons.lang.version>
+		<com.querydsl.version>4.1.4</com.querydsl.version>
 	</properties>
 	<dependencies>
 	</dependencies>
