统一异常处理

--- a/01SOURCE/base-common-util/pom.xml
+++ b/01SOURCE/base-common-util/pom.xml
@@ -57,7 +57,18 @@
 			<artifactId>spring-web</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
-
+		<!-- 为了定义统一异常处理 ↓↓↓↓↓↓-->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.1.0</version>
+		</dependency>
+		<!-- 为了定义统一异常处理 ↑↑↑↑↑↑-->
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
