--- a/01SOURCE/base-web-bootstrap/WebContent/WEB-INF/web.xml
+++ b/01SOURCE/base-web-bootstrap/WebContent/WEB-INF/web.xml
@@ -10,10 +10,6 @@
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
-	<context-param>
-		<param-name>contextConfigLocation</param-name>
-		<param-value>classpath:spring-context.xml</param-value>
-	</context-param>
 
 	<filter>
 		<filter-name>CharacterEncodingFilter</filter-name>
@@ -71,5 +67,10 @@
 			<max-request-size>4194304</max-request-size>
 		</multipart-config>
 	</servlet>
+	
+	<context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>classpath:application-context.xml</param-value>
+	</context-param>
 
 </web-app>
