--- a/01SOURCE/springboot/bootworkflow/src/main/resources/application.yml
+++ b/01SOURCE/springboot/bootworkflow/src/main/resources/application.yml
@@ -16,7 +16,7 @@ spring:
   mvc:
     view:
       prefix: /template/
-      suffix: .html
+      suffix: .jsp
     static-path-pattern: /static/**
   thymeleaf:
     cache: false
