--- a/01SOURCE/springboot/bootweb/src/main/resources/application.yml
+++ b/01SOURCE/springboot/bootweb/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 server:
   context-path: /web
-  port: 8080
+  port: 8082
 spring:
   datasource:
     name: test
@@ -13,17 +13,17 @@ spring:
     hibernate:
       ddl-auto: update #自动更新
     show-sql: true  #日志中显示sql语句
-  mvc:
-    view:
-      prefix: /template/
-      suffix: .html
-    static-path-pattern: /static/**
+#  mvc:
+#    view:
+#      prefix: /template/
+#      suffix: .jsp
+#    static-path-pattern: /static/**
   thymeleaf:
     cache: false
     prefix: classpath:/templates/
     suffix: .html
-    mode: HTML5
+    mode: LEGACYHTML5
     encoding: UTF-8
     content-type: text/html
-    
-   
+  resources:
+    static-locations: classpath:/templates/,classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/
