--- a/01SOURCE/springboot/base-common-springboot/pom.xml
+++ b/01SOURCE/springboot/base-common-springboot/pom.xml
@@ -5,17 +5,12 @@
 
 	<groupId>cn.doublepoint</groupId>
 	<artifactId>base-common-springboot</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>base-common-springboot</name>
-	<description>Demo project for Spring Boot</description>
-
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.0.5.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<groupId>cn.doublepoint.base</groupId>
+		<artifactId>base-parent-springboot</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 
 	<properties>
@@ -34,6 +29,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency> 
+		
+		<dependency>
+			<groupId>cn.doublepoint</groupId>
+			<artifactId>base-common-util-springboot</artifactId>
+			<version>${cn.doublepoint.base.version}</version>
 		</dependency>
 	</dependencies>
 
