--- a/01SOURCE/springboot/bootweb/pom.xml
+++ b/01SOURCE/springboot/bootweb/pom.xml
@@ -5,25 +5,13 @@
 
 	<groupId>cn.doublepoint</groupId>
 	<artifactId>bootweb</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>bootweb</name>
-	<description>Demo project for Spring Boot</description>
-
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.5.2.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<groupId>cn.doublepoint.base</groupId>
+		<artifactId>base-parent-springboot</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<java.version>1.8</java.version>
-		<cn.doublepoint.base.version>0.0.1-SNAPSHOT</cn.doublepoint.base.version>
-	</properties>
 
 	<dependencies>
 		<dependency>
