--- a/01SOURCE/springboot/bootweb/src/main/resources/application.yml
+++ b/01SOURCE/springboot/bootweb/src/main/resources/application.yml
@@ -13,8 +13,6 @@ spring:
     hibernate:
       ddl-auto: update #自动更新
     show-sql: true  #日志中显示sql语句
-workflow:
-  url: localhost
 #  mvc:
 #    view:
 #      prefix: /template/
@@ -23,9 +21,11 @@ workflow:
   thymeleaf:
     cache: false
     prefix: classpath:/templates/
-    suffix: 
+    suffix:  
     mode: LEGACYHTML5
     encoding: UTF-8
     content-type: text/html
   resources:
     static-locations: classpath:/templates/,classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/
+workflow:
+  url: localhost:8082/workflow
