--- a/01SOURCE/springboot/bootworkflow/pom.xml
+++ b/01SOURCE/springboot/bootworkflow/pom.xml
@@ -98,7 +98,11 @@
 		<dependency>
 			<groupId>cn.doublepoint.base</groupId>
 			<artifactId>base-common</artifactId>
-			<version>${cn.doublepoint.base.version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>cn.doublepoint.base</groupId>
+			<artifactId>base-common-workflow</artifactId>
 		</dependency>
 		
 	</dependencies>
