--- a/01SOURCE/base-common-workflow/pom.xml
+++ b/01SOURCE/base-common-workflow/pom.xml
@@ -2,61 +2,17 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>base-common-workflow</artifactId>
   
-  <parent>
+  	<parent>
 		<groupId>cn.doublepoint.base</groupId>
-		<artifactId>base-parent</artifactId>
+		<artifactId>base-parent-springboot</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 
-	<properties>
-		<activiti.version>5.21.0</activiti.version>
-	</properties>
-	
 	<dependencies>
-		
-		<dependency>
-			<groupId>org.activiti</groupId>
-			<artifactId>activiti-modeler</artifactId>
-			<version>${activiti.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.activiti</groupId>
-			<artifactId>activiti-engine</artifactId>
-			<version>${activiti.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.activiti</groupId>
-			<artifactId>activiti-cxf</artifactId>
-			<version>${activiti.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-context-support</artifactId>
-			<version>${spring.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.34</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.activiti</groupId>
-			<artifactId>activiti-spring</artifactId>
-			<version>${activiti.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-jdbc</artifactId>
-			<version>${spring.version}</version>
-		</dependency>
-
-		<!-- 本地项目 -->
 		<dependency>
 			<groupId>cn.doublepoint.base</groupId>
 			<artifactId>base-common-util</artifactId>
-			<version>${cn.doublepoint.base.version}</version>
 		</dependency>
+		
 	</dependencies>
 </project>
