--- a/01SOURCE/base-common/pom.xml
+++ b/01SOURCE/base-common/pom.xml
@@ -4,7 +4,7 @@
 
 	<parent>
 		<groupId>cn.doublepoint.base</groupId>
-		<artifactId>base-parent</artifactId>
+		<artifactId>base-parent-springboot</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 
@@ -13,63 +13,50 @@
 		<dependency>
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-jpa</artifactId>
-			<version>${spring.data.jpa.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-entitymanager</artifactId>
-			<version>${hibernate.entitymanager.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>javax.annotation</groupId>
 			<artifactId>jsr250-api</artifactId>
-			<version>1.0</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
-			<version>${spring.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
-			<version>${spring.version}</version>
 		</dependency>
 
 		<!-- 测试相关 ↓↓↓-->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
-			<version>${spring.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<!--MySQL Driver -->
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.34</version>
 			<scope>test</scope>
 		</dependency>
 		<!-- 测试相关↑↑↑-->
-		<!-- 本地项目 -->
-		<!-- <dependency> <groupId>cn.doublepoint.base</groupId> <artifactId>base-datajpa</artifactId> <version>${cn.doublepoint.base.version}</version> </dependency> -->
-
-		<!-- <dependency> <groupId>cn.doublepoint.base</groupId> <artifactId>base-jdbc</artifactId> <version>${cn.doublepoint.base.version}</version> </dependency> -->
 
 		<dependency>
 			<groupId>cn.doublepoint.base</groupId>
 			<artifactId>base-common-util</artifactId>
-			<version>${cn.doublepoint.base.version}</version>
 		</dependency>
 
 	</dependencies>
@@ -77,7 +64,7 @@
 	<build>
 		<!-- <finalName>open</finalName> -->
 		<plugins>
-			<plugin>
+			<!-- <plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.2</version>
@@ -85,13 +72,12 @@
 					<source>1.7</source>
 					<target>1.7</target>
 				</configuration>
-			</plugin>
+			</plugin> -->
 
 			<!-- 解决问题 -source 1.5 中不支持 lambda 表达式 替换为1.8 -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.2</version>
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
