--- a/01SOURCE/springboot/base-parent-springboot/pom.xml
+++ b/01SOURCE/springboot/base-parent-springboot/pom.xml
@@ -9,12 +9,13 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>1.5.2.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 
 
 	<properties>
 		<mybatis.version>3.2.6</mybatis.version>
+		<mysql.version>5.1.34</mysql.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<!-- spring版本号 -->
 		<spring.version>4.3.7.RELEASE</spring.version>
@@ -25,8 +26,84 @@
 		<cn.doublepoint.base.version>0.0.1-SNAPSHOT</cn.doublepoint.base.version>
 		<commons.lang.version>2.3</commons.lang.version>
 	</properties>
+
 	<dependencies>
 	</dependencies>
+
+	<dependencyManagement>
+		<dependencies>
+
+			<dependency>
+				<groupId>cn.doublepoint.base</groupId>
+				<artifactId>base-common-util</artifactId>
+				<version>${cn.doublepoint.base.version}</version>
+			</dependency>
+			
+			<dependency>
+				<groupId>cn.doublepoint.base</groupId>
+				<artifactId>base-common-workflow</artifactId>
+				<version>${cn.doublepoint.base.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>cn.doublepoint.base</groupId>
+				<artifactId>base-common</artifactId>
+				<version>${cn.doublepoint.base.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.springframework.data</groupId>
+				<artifactId>spring-data-jpa</artifactId>
+				<version>${spring.data.jpa.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.hibernate</groupId>
+				<artifactId>hibernate-entitymanager</artifactId>
+				<version>${hibernate.entitymanager.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>javax.annotation</groupId>
+				<artifactId>jsr250-api</artifactId>
+				<version>1.0</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-context</artifactId>
+				<version>${spring.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-core</artifactId>
+				<version>${spring.version}</version>
+			</dependency>
+
+			<!-- 测试相关 ↓↓↓ -->
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-test</artifactId>
+				<version>${spring.version}</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>junit</groupId>
+				<artifactId>junit</artifactId>
+				<version>${junit.version}</version>
+				<scope>test</scope>
+			</dependency>
+			<!--MySQL Driver -->
+			<dependency>
+				<groupId>mysql</groupId>
+				<artifactId>mysql-connector-java</artifactId>
+				<version>${mysql.version}</version>
+				
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+
 	<build>
 		<plugins>
 			<plugin>
