--- a/01SOURCE/springboot/bootworkflow/pom.xml
+++ b/01SOURCE/springboot/bootworkflow/pom.xml
@@ -100,10 +100,10 @@
 			<artifactId>base-common-util</artifactId>
 		</dependency>
 		
-		<!-- <dependency>
+		<dependency>
 			<groupId>cn.doublepoint.base</groupId>
-			<artifactId>base-common-workflow</artifactId>
-		</dependency> -->
+			<artifactId>base-common-web</artifactId>
+		</dependency>
 		
 	</dependencies>
 
