--- a/01SOURCE/springboot/base-parent-springboot/pom.xml
+++ b/01SOURCE/springboot/base-parent-springboot/pom.xml
@@ -107,6 +107,11 @@
 				<version>${mysql.version}</version>
 				
 			</dependency>
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot</artifactId>
+				<version>1.5.2.RELEASE</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
